--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <!--radix_placeholder_meta_tags-->
   <title>The Effect of Age on Political Ideology</title>
 
-  <meta property="description" itemprop="description" content="Drawing on two European countries that recently switched to a right-wing government, I seek to analyze the effect that age has on political ideology"/>
+  <meta property="description" itemprop="description" content="Drawing on two European countries that recently switched to a right-wing government, I seek to analyze the effect that age has on political ideology."/>
 
 
   <meta name="article:author" content="Lenny Pische"/>
@@ -98,19 +98,19 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <!--  https://developers.facebook.com/docs/sharing/webmasters#markup -->
   <meta property="og:title" content="The Effect of Age on Political Ideology"/>
   <meta property="og:type" content="article"/>
-  <meta property="og:description" content="Drawing on two European countries that recently switched to a right-wing government, I seek to analyze the effect that age has on political ideology"/>
+  <meta property="og:description" content="Drawing on two European countries that recently switched to a right-wing government, I seek to analyze the effect that age has on political ideology."/>
   <meta property="og:locale" content="en_US"/>
 
   <!--  https://dev.twitter.com/cards/types/summary -->
   <meta property="twitter:card" content="summary"/>
   <meta property="twitter:title" content="The Effect of Age on Political Ideology"/>
-  <meta property="twitter:description" content="Drawing on two European countries that recently switched to a right-wing government, I seek to analyze the effect that age has on political ideology"/>
+  <meta property="twitter:description" content="Drawing on two European countries that recently switched to a right-wing government, I seek to analyze the effect that age has on political ideology."/>
 
   <!--/radix_placeholder_meta_tags-->
   <!--radix_placeholder_rmarkdown_metadata-->
 
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","author","description","output"]}},"value":[{"type":"character","attributes":{},"value":["The Effect of Age on Political Ideology"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name"]}},"value":[{"type":"character","attributes":{},"value":["Lenny Pische"]}]}]},{"type":"character","attributes":{},"value":["Drawing on two European countries that recently switched to a right-wing government, I seek to analyze the effect that age has on political ideology"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained"]}},"value":[{"type":"logical","attributes":{},"value":[false]}]}]}]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","author","description","output"]}},"value":[{"type":"character","attributes":{},"value":["The Effect of Age on Political Ideology"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name"]}},"value":[{"type":"character","attributes":{},"value":["Lenny Pische"]}]}]},{"type":"character","attributes":{},"value":["Drawing on two European countries that recently switched to a right-wing government, I seek to analyze the effect that age has on political ideology."]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained"]}},"value":[{"type":"logical","attributes":{},"value":[false]}]}]}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   
@@ -1495,7 +1495,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <!--radix_placeholder_front_matter-->
 
 <script id="distill-front-matter" type="text/json">
-{"title":"The Effect of Age on Political Ideology","description":"Drawing on two European countries that recently switched to a right-wing government, I seek to analyze the effect that age has on political ideology","authors":[{"author":"Lenny Pische","authorURL":"#","affiliation":"&nbsp;","affiliationURL":"#","orcidID":""}]}
+{"title":"The Effect of Age on Political Ideology","description":"Drawing on two European countries that recently switched to a right-wing government, I seek to analyze the effect that age has on political ideology.","authors":[{"author":"Lenny Pische","authorURL":"#","affiliation":"&nbsp;","affiliationURL":"#","orcidID":""}]}
 </script>
 
 <!--/radix_placeholder_front_matter-->
@@ -1508,7 +1508,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <h1>The Effect of Age on Political Ideology</h1>
 <!--radix_placeholder_categories-->
 <!--/radix_placeholder_categories-->
-<p>Drawing on two European countries that recently switched to a right-wing government, I seek to analyze the effect that age has on political ideology</p>
+<p>Drawing on two European countries that recently switched to a right-wing government, I seek to analyze the effect that age has on political ideology.</p>
 </div>
 
 <div class="d-byline">
