--- a/index.html
+++ b/index.html
@@ -2333,17 +2333,17 @@ Works Cited
 </p>
 <p id="footnote-1">
 <ol type="1">
-<li>Allen, Grahame. Recession and Recovery, 2010. House of Commons Library Research. <a href="https://www.parliament.uk/globalassets/documents/commons/lib/research/key_issues/key-issues-recession-and-recovery.pdf"> Link. </a>
+<li>Allen, Grahame. <em>Recession and Recovery, 2010.</em> House of Commons Library Research. <a href="https://www.parliament.uk/globalassets/documents/commons/lib/research/key_issues/key-issues-recession-and-recovery.pdf"> Link. </a>
 </p></li>
 </ol>
 <p id="footnote-2">
 <ol start="2" type="1">
-<li>Estimated percentage of votes won in the chamber of deputies and senate in the Italian general election of 2022, by coalition. Statista, 2022. <a href="https://www.statista.com/statistics/1335834/italy-election-results/">Link.</a>
+<li><em>Estimated percentage of votes won in the chamber of deputies and senate in the Italian general election of 2022, by coalition.</em> Statista, 2022. <a href="https://www.statista.com/statistics/1335834/italy-election-results/">Link.</a>
 </p></li>
 </ol>
 <p id="footnote-3">
 <ol start="3" type="1">
-<li>List of United Kingdom general elections. Wikipedia, the free encyclopedia, 2023. <a href="https://en.wikipedia.org/wiki/List_of_United_Kingdom_general_elections">Link.</a>
+<li><em>List of United Kingdom general elections.</em> Wikipedia, the free encyclopedia, 2023. <a href="https://en.wikipedia.org/wiki/List_of_United_Kingdom_general_elections">Link.</a>
 </p></li>
 </ol>
 <p><em>This project has been completed on Wednesday, December 13th, 2023. It is the final assignment of the Harvard University undergraduate course <strong>GOV 50: Data Science for the Social Sciences</strong> for the Fall 2023 Semester.</em></p>
